# multipart-rocket-demo

./: Cargo.toml  README.md
src/: main.rs  middleware.rs
