[package]
name = "multipart_test"
version = "0.1.0"
authors = ["Kristopher Ruzic <krruzic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket-multipart-form-data = "0.7.2"
serde = { version = "*", features = ["derive"]}
serde_json = "1.0.44"
